--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light navigation">
         <div class="container-fluid">
-            <a class="navbar-brand navigation" href="#">
+            <a class="navbar-brand navigation" href="index.html">
                 <img class="img-fluid"src="assets/img/logo.png" alt="" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
